--- a/style.css
+++ b/style.css
@@ -1,12 +1,73 @@
-input, div{
-    width: 70%;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+#url{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 10px 20px;
+}
+
+#url input{
     height: 40px;
     font-size: 20px;
+    padding-left: 10px;
 }
-button{
+
+#url button{
     width: 100px;
     height: 40px;
 }
-#output{
-    font-size: 30px;
+
+#url #output{
+    border: 1px solid black;
+    width: 100%;
+    height: 40px;
+    font-size: 20px;
+    padding-left: 10px;
+    padding-top: 7px;
+}
+
+#url #output-value{
+    display: grid;
+    grid-template-columns: 70% 30%;
+    margin-left: 10px;
+}
+
+#upper{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 10px 20px;
+}
+
+#upper input{
+    height: 40px;
+    font-size: 20px;
+    padding-left: 10px;
+}
+
+#upper button{
+    width: 100px;
+    height: 40px;
+}
+
+#upper #output{
+    border: 1px solid black;
+    width: 100%;
+    height: 40px;
+    font-size: 20px;
+    padding-left: 10px;
+    padding-top: 7px;
+}
+
+#upper #output-value{
+    display: grid;
+    grid-template-columns: 70% 30%;
+    margin-left: 10px;
+}
+
+#copyToClipboard{
+    margin-left: 20px;
 }
