--- a/style.css
+++ b/style.css
@@ -6,8 +6,18 @@
 
 #url{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
     padding: 10px 20px;
+}
+@media (max-width: 320px) {
+    #url{
+        grid-template-rows: repeat(2, 1fr);
+
+    }
+}
+@media (min-width: 320px) {
+    #url{
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 #url input{
