--- a/style.css
+++ b/style.css
@@ -6,18 +6,31 @@
 
 #url{
     display: grid;
-    padding: 10px 20px;
+    column-gap: 10px;
 }
 @media (max-width: 320px) {
-    #url{
-        grid-template-rows: repeat(2, 1fr);
-
+    #upper, #url{
+        padding: 10px 10px;
+        grid-template-rows: repeat(2, auto);
+        row-gap: 10px;
     }
+        #url #output-value,
+        #upper #output-value {
+            display: grid;
+            grid-template-rows: repeat(2, auto);
+            row-gap: 10px;
+        }
 }
 @media (min-width: 320px) {
-    #url{
-        grid-template-columns: repeat(2, 1fr);
-    }
+        #upper, #url{
+            padding: 10px 10px;
+            grid-template-columns: repeat(2, 1fr);
+        }
+        #url #output-value, #upper #output-value {
+            display: grid;
+            column-gap: 20px;
+                    grid-template-columns: 70% 30%;
+                }
 }
 
 #url input{
@@ -27,7 +40,7 @@
 }
 
 #url button{
-    width: 100px;
+    width: 100%;
     height: 40px;
 }
 
@@ -36,20 +49,15 @@
     width: 100%;
     height: 40px;
     font-size: 20px;
-    padding-left: 10px;
-    padding-top: 7px;
 }
 
 #url #output-value{
     display: grid;
-    grid-template-columns: 70% 30%;
-    margin-left: 10px;
 }
 
 #upper{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    padding: 10px 20px;
+    column-gap: 10px;
 }
 
 #upper input{
@@ -59,7 +67,7 @@
 }
 
 #upper button{
-    width: 100px;
+    width: 100%;
     height: 40px;
 }
 
@@ -74,10 +82,5 @@
 
 #upper #output-value{
     display: grid;
-    grid-template-columns: 70% 30%;
-    margin-left: 10px;
-}
-
-#copyToClipboard{
-    margin-left: 20px;
+    
 }
